[package]
name = "caribou"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glutin = "0.29.1"
skia-safe = { version = "0.55.0", features = ["gpu", "gl"] }
log = "0.4.17"
tokio = "1.21.2"